<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddressFragment">

    <TextView
        android:id="@+id/textview_postal_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textview_postal_code_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/edittext_postal_code"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_postal_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textview_postal_code_label"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="7"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_postal_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textview_postal_code" />

    <Button
        android:id="@+id/button_address_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_address_search_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_postal_code" />

    <TextView
        android:id="@+id/textview_prefecture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textview_prefecture_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner_prefecture"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_address_search" />

    <Spinner
        android:id="@+id/spinner_prefecture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/prefectures"
        android:spinnerMode="dialog"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_prefecture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textview_prefecture" />

    <TextView
        android:id="@+id/textview_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textview_city_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/edittext_city"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_prefecture" />

    <EditText
        android:id="@+id/edittext_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textview_city_label"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textview_city" />

    <TextView
        android:id="@+id/textview_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textview_address_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/edittext_address"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_city" />

    <EditText
        android:id="@+id/edittext_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textview_address_label"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textview_address" />

    <TextView
        android:id="@+id/textview_house_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textveiw_house_name_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/edittext_house_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_address" />

    <EditText
        android:id="@+id/edittext_house_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textveiw_house_name_label"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_house_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textview_house_name" />

    <TextView
        android:id="@+id/textview_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textview_full_name_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/edittext_full_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_house_name" />

    <EditText
        android:id="@+id/edittext_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textview_full_name_label"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textview_full_name" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_full_name" />

</androidx.constraintlayout.widget.ConstraintLayout>